--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    implementation 'org.springframework:spring-core:5.3.26'
+    implementation 'org.springframework:spring-beans:5.3.26'
+    implementation 'org.springframework:spring-context:5.3.26'
+
+
 }
 
 test {
