--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     implementation 'org.springframework:spring-core:5.3.26'
-    implementation 'org.springframework:spring-beans:5.3.26'
     implementation 'org.springframework:spring-context:5.3.26'
+    implementation 'org.springframework:spring-web:5.3.26'
+    implementation 'org.springframework:spring-webmvc:5.3.26'
+    implementation 'org.thymeleaf:thymeleaf-spring5:3.1.1.RELEASE'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
